# SmartCalc_v1.0

./: README.md
src/: CMakeLists.txt  Makefile  array_stack_help.c  calc.h  calculate.c  enefete.h  main.c  raygui.h  readme.html  ruigui_helper.c  string_edit.c  style.h  validate.c
src/tests/: main.c  test.c  test.h
